--- a/.github/workflows/.gh-deploy.yml
+++ b/.github/workflows/.gh-deploy.yml
@@ -12,6 +12,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
         run: |
           pnpm install
           ./linkstuff.sh
