--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
