--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.6.0",
     "chess.js": "1.0.0-alpha.0",
+    "chessreplay23": "link:../chessreplay23",
     "chessboard23": "link:../chessboard23",
     "chessground": "^8.3.6",
     "lchessanalysis": "link:../lchessanalysis",
