--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@mliebelt/pgn-parser": "^1.4.6",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.6.0",
     "chess.js": "1.0.0-alpha.0",
